--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -1,8 +1,6 @@
 name: Daily Commit
 
 on:
-  schedule:
-    - cron: '30 5 * * *'  # Runs every day at 05:30 UTC
   workflow_dispatch:      # Allows manual triggering
 
 jobs:
@@ -23,3 +21,6 @@ jobs:
           git add daily-log.txt
           git commit -m "Automated daily commit"
           git push
+
+
+# will not run anymore
