--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -1,11 +1,16 @@
 name: Daily Commit
 
+
 on:
+  schedule:
+    - cron: '45 17 * * *'
   workflow_dispatch:      # Allows manual triggering
 
 jobs:
   commit_job:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
