--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -3,7 +3,7 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '45 17 * * *'
+    - cron: '30 5 * * *'  # Runs every day at 05:30 UTC
   workflow_dispatch:      # Allows manual triggering
 
 jobs:
