--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -1,31 +1,31 @@
-# name: Daily Commit
+name: Daily Commit
 
 
-# on:
-#   schedule:
-#     - cron: '30 5 * * *'  # Runs every day at 05:30 UTC
-#   workflow_dispatch:      # Allows manual triggering
+on:
+  schedule:
+    - cron: '30 5 * * *'  # Runs every day at 05:30 UTC
+  workflow_dispatch:      # Allows manual triggering
 
-# jobs:
-#   commit_job:
-#     runs-on: ubuntu-latest
-#     permissions:
-#       contents: write
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v4
+jobs:
+  commit_job:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-#       - name: Update file (22f2000788@ds.study.iitm.ac.in)
-#         run: |
-#           echo "Updated on $(date)" >> daily-log.txt
+      - name: Update file (22f2000788@ds.study.iitm.ac.in)
+        run: |
+          echo "Updated on $(date)" >> daily-log.txt
 
-#       - name: Commit changes
-#         run: |
-#           git config user.name "github-actions[bot]"
-#           git config user.email "github-actions[bot]@users.noreply.github.com"
-#           git add daily-log.txt
-#           git commit -m "Automated daily commit"
-#           git push
+      - name: Commit changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add daily-log.txt
+          git commit -m "Automated daily commit"
+          git push
 
 
-# # will not run anymore
+# will not run anymore
